# new-life

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  _run.sh  cmake_install.cmake  creature.cpp  creature.h  creatureSprite.cpp  creatureSprite.h  gameLevel.h  gameTile.cpp  gameTile.h  gameWorld.cpp  gameWorld.h  item.cpp  item.h  itemDoor.h  itemSprite.cpp  itemSprite.h  main.cpp  makefile  playerCreature.cpp  playerCreature.h  playerSprite.cpp  playerSprite.h  readFile.cpp  readFile.h  storyIdeas.txt  tileMap.cpp  todos.txt
Image-rawfiles/: prtag-down-stand.kra  prtag-down-stand.kra~  rockWall.kra  rockWall.kra~  stoneDoor.kra
_depracated/: gameWorld.cpp
_helperTxtFiles/: todos.txt
creatures/: creature.cpp  creature.h  playerCreature.cpp  playerCreature.h
gameLevels/: exsample.csv
helperTxtFiles/: todos.txt
images/Image-rawfiles/: dungon-src.kra  protagV2.kra  prtag-front.kra  prtag-up-stand.kra  rockPath.kra  slime.kra
items/: doorItem.h  item.cpp
testFiles/: readFileTest.h  testCreature.h  testRunner.h
